Added Product Table

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
       src="https://kit.fontawesome.com/2ea5d76c73.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body class="mat-typography">
     <script
